# PMT

./: README.md  log.txt  udp_logger.c
DE2-115/and_test/: and_test.qpf  and_test.qsf  and_test.vhd
DE2-115/and_test/db/: .cmp.kpt  and_test.(0).cnf.cdb  and_test.(0).cnf.hdb  and_test.asm.qmsg  and_test.asm.rdb  and_test.asm_labs.ddb  and_test.cbx.xml  and_test.cmp.bpm  and_test.cmp.cdb  and_test.cmp.hdb  and_test.cmp.idb  and_test.cmp.logdb  and_test.cmp.rdb  and_test.cmp_merge.kpt  and_test.cycloneive_io_sim_cache.45um_ii_1200mv_85c_slow.hsd  and_test.db_info  and_test.eda.qmsg  and_test.fit.qmsg  and_test.hier_info  and_test.hif  and_test.lpc.rdb  and_test.map.bpm  and_test.map.cdb  and_test.map.hdb  and_test.map.kpt  and_test.map.qmsg  and_test.map.rdb  and_test.map_bb.cdb  and_test.map_bb.hdb  and_test.pplq.rdb  and_test.pre_map.hdb  and_test.root_partition.map.reg_db.cdb  and_test.routing.rdb  (+11 more)
PCB/: PMT_FPGA_PCB-B_Cu.gbr_ncc.DXF  PMT_FPGA_PCB-F_Cu.DXF  PMT_FPGA_PCB-F_Cu.gbr_bbox.DXF  PMT_FPGA_PCB-F_Cu.gbr_ncc.DXF  flatcam.FlatPrj
firmware/: ADC_Ethernet.qpf  ADC_Ethernet.qsf  ADC_Ethernet.qws
firmware/db/: ADC_Ethernet.cmp.rdb  ADC_Ethernet.db_info  ADC_Ethernet.map.qmsg  ADC_Ethernet.map.rdb  ADC_Ethernet.map_bb.hdb  ADC_Ethernet.tis_db_list.ddb
firmware/output_files/: ADC_Ethernet.flow.rpt  ADC_Ethernet.map.rpt  ADC_Ethernet.map.summary
software/: adqui  adqui.cpp  analisis.py  capturador  datos  graficar_adc.py  scanner  scanner.cpp  udp_logger.py  udp_sniffer  udp_sniffer.cpp  udp_test
software/fpga_udp_receiver/: CMakeLists.txt  main.cpp
(+1362 files in other folders)
